--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.2.4",
+    "md5": "^2.0.0",
     "node-notifier": "^4.2.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "reactify": "^1.1.0",
     "reflux": "^0.3.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
