--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^0.14.3",
     "reactify": "^1.1.0",
     "reflux": "^0.3.0",
+    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
   }
