--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.0.0",
     "node-notifier": "^4.2.1",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.3",
     "reactify": "^1.1.0",
     "reflux": "^0.3.0",
